# TURBO-pragmaticus

./: ! T#p Bootstrapper.docx  ! TURBO Pragmaticus Backup 1.rar  ! Template 2 col.docx  ! z Initial disposition.txt  0. Table of Contents.txt  1. Introduction.docx  1. TODO Introduction.txt  10. WIP Equipment.txt  10. Worldly Possesions.docx  10.4 Weapons (new).docx  10.9 Encumbrance (stupid version).docx  11. WIP Character Creation.txt  12. WIP Trait List.txt  13. WIP Perk List.txt  15. Karma.rtf  15. Vestiges.rtf  16. Meta Mechanics.txt  2. Elements of Character.docx  3. Skills & Skill Tests.docx  3.1 DEPRECATED Focus.txt  3.2 Advancement.docx  3.2 Skill Advancement.docx  3.4 Skill Challenges (experimental).docx  4. Skill List.rtf  5. Mortals' Hardships.docx  6.1 Initial NPC Reactions.docx  6.3 Social Conflicts.docx  6.3 Social Encounters.docx  6.3.1 Social Encounter Powers.txt  7. WIP Corruption.txt  8. Sequences (initiative deck).docx  8. Sequences.docx  8.1 Combat.docx  README.md  Z Weapons TEMP.docx  Z_Notes.txt  Z_TODO.txt  Z_TO_DO.txt  Z_USEFUL_ARTICLES.txt
! Misc/: 10.9 Encumbrance (Old).docx  Scaling Damage for Size.docx  The Art.rtf  Z Weapons TEMP.docx  new-1.txt  size-scale.kra
! Montecarlo/: Probabilities KV 5 CM 0 Eff 0.txt  results-new.txt  results.txt
! Obsolete/: 10.2 Armour (obsolete).docx  10.4 Weapons (deprecated).docx  (+10 more)
CSGen/: .gitignore  CMakeLists.txt  CMakeSettings.json  Conan_install.bat  conanfile.txt
CSGen/src/: Common.hpp  Framework.cpp  Framework.hpp  GeneratorBase.hpp  Main.cpp  TurboPragmaticus.cpp  TurboPragmaticus.hpp
(+45 files in other folders)
